@@ -1,5 +1,10 @@
 2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>
 
+	* libgdict/*.[ch]: Use the sources to write the documentation,
+	as it should be.
+
+2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>
+
 	* libgdict/gdict-defbox.c: Add case-insensitive search, using
 	gtksourceview search code. (#466180)
 	
